WebCore/plugins/PluginDatabase.cpp
@@ -34,14 +34,17 @@
 
 namespace WebCore {
 
-PluginDatabase* PluginDatabase::installedPlugins()
+PluginDatabase* PluginDatabase::installedPlugins(bool populate)
 {
     static PluginDatabase* plugins = 0;
-    
+
     if (!plugins) {
         plugins = new PluginDatabase;
-        plugins->setPluginDirectories(PluginDatabase::defaultPluginDirectories());
-        plugins->refresh();
+
+        if (populate) {
+            plugins->setPluginDirectories(PluginDatabase::defaultPluginDirectories());
+            plugins->refresh();
+        }
     }
 
     return plugins;
@@ -64,7 +67,7 @@ void PluginDatabase::addExtraPluginDirectory(const String& directory)
 }
 
 bool PluginDatabase::refresh()
-{   
+{
     bool pluginSetChanged = false;
 
     if (!m_plugins.isEmpty()) {
@@ -262,6 +265,14 @@ void PluginDatabase::remove(PluginPackage* package)
 {
     m_plugins.remove(package);
     m_pluginsByPath.remove(package->path());
+}
+
+void PluginDatabase::clear()
+{
+    m_plugins.clear();
+    m_pluginsByPath.clear();
+
+    m_registeredMIMETypes.clear();
 }
 
 #if !PLATFORM(WIN_OS) || PLATFORM(WX)
